--- a/notebooks/01_exploracion.ipynb
+++ b/notebooks/01_exploracion.ipynb
@@ -2,16 +2,183 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "e2c2a3db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "636567d7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "link_data = \"https://raw.githubusercontent.com/dD2405/Twitter_Sentiment_Analysis/master/train.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3f1c57f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(link_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c66955ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>label</th>\n",
+       "      <th>tweet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>@user when a father is dysfunctional and is s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>@user @user thanks for #lyft credit i can't us...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>bihday your majesty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>#model   i love u take with u all the time in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>factsguide: society now    #motivation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31957</th>\n",
+       "      <td>31958</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ate @user isz that youuu?ðððððð...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31958</th>\n",
+       "      <td>31959</td>\n",
+       "      <td>0</td>\n",
+       "      <td>to see nina turner on the airwaves trying to...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31959</th>\n",
+       "      <td>31960</td>\n",
+       "      <td>0</td>\n",
+       "      <td>listening to sad songs on a monday morning otw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31960</th>\n",
+       "      <td>31961</td>\n",
+       "      <td>1</td>\n",
+       "      <td>@user #sikh #temple vandalised in in #calgary,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31961</th>\n",
+       "      <td>31962</td>\n",
+       "      <td>0</td>\n",
+       "      <td>thank you @user for you follow</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>31962 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id  label                                              tweet\n",
+       "0          1      0   @user when a father is dysfunctional and is s...\n",
+       "1          2      0  @user @user thanks for #lyft credit i can't us...\n",
+       "2          3      0                                bihday your majesty\n",
+       "3          4      0  #model   i love u take with u all the time in ...\n",
+       "4          5      0             factsguide: society now    #motivation\n",
+       "...      ...    ...                                                ...\n",
+       "31957  31958      0  ate @user isz that youuu?ðððððð...\n",
+       "31958  31959      0    to see nina turner on the airwaves trying to...\n",
+       "31959  31960      0  listening to sad songs on a monday morning otw...\n",
+       "31960  31961      1  @user #sikh #temple vandalised in in #calgary,...\n",
+       "31961  31962      0                   thank you @user for you follow  \n",
+       "\n",
+       "[31962 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
